[gd_scene load_steps=20 format=3 uid="uid://xweipnxbmio8"]

[ext_resource type="Script" path="res://scenes/template_player/CharacterBody3D.gd" id="1_rf1y4"]
[ext_resource type="Texture2D" uid="uid://b5081glkfwibl" path="res://textures/sprites/Tomat/tomatoSprite.png" id="2_f0e40"]
[ext_resource type="Texture2D" uid="uid://c0qerkmbtydkx" path="res://textures/sprites/Tomat/eyes.png" id="3_sgufp"]
[ext_resource type="Texture2D" uid="uid://djkbwkasi8d6o" path="res://textures/sprites/Tomat/mouse.png" id="4_w3ij3"]
[ext_resource type="Texture2D" uid="uid://dcpaimd0qdj35" path="res://textures/sprites/Tomat/anim_idle.png" id="5_ouq7k"]
[ext_resource type="Texture2D" uid="uid://b2g7is323ayeg" path="res://textures/sprites/Tomat/anim_tomato_run.png" id="6_hortq"]
[ext_resource type="Script" path="res://scenes/template_player/player_input.gd" id="7_xptgb"]
[ext_resource type="PackedScene" uid="uid://cdta8ij4e7xpt" path="res://scenes/Inventory/ui/inventory/InventoryPlayer.tscn" id="8_7qvr4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_43irl"]
height = 1.15449

[sub_resource type="Animation" id="Animation_eotaa"]
resource_name = "IDLE"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0608515, 0.0655381, -0.0655381), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918), Vector3(-0.0526779, 0.0491918, -0.0491918)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Legs:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4), Vector3(0, -0.4, 0.4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Legs:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k"), ExtResource("5_ouq7k")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Legs:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(0, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12), Rect2(39, 0, 39, 12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Legs:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false]
}

[sub_resource type="Animation" id="Animation_lddyw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0608515, 0.0655381, -0.0655381)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Legs:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.4, 0.4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Legs:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ouq7k")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Legs:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 39, 12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Legs:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.785398, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.785398, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ub3k3"]
resource_name = "RUN_DOWN"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0.00611225, 0.121768, -0.121768), Vector3(0.00611225, 0.230342, -0.230342), Vector3(0.00611225, 0.122424, -0.122424), Vector3(0.00611225, 0.0599555, -0.0599555), Vector3(0.00611225, 0.169635, -0.169635), Vector3(0.00611225, 0.237224, -0.237224), Vector3(0.00611225, 0.118782, -0.118782), Vector3(0.00611225, 0.0637072, -0.0637072)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Legs:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Legs:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(64, 0, 32, 18), Rect2(160, 0, 32, 18), Rect2(256, 0, 32, 18), Rect2(352, 0, 32, 18), Rect2(448, 0, 32, 18), Rect2(544, 0, 32, 18), Rect2(640, 0, 32, 18), Rect2(736, 0, 32, 18)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Legs:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3djdd"]
resource_name = "RUN_RIGHT"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Legs:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(32, 0, 32, 18), Rect2(128, 0, 32, 18), Rect2(224, 0, 32, 18), Rect2(320, 0, 32, 18), Rect2(416, 0, 32, 18), Rect2(512, 0, 32, 18), Rect2(608, 0, 32, 18), Rect2(704, 0, 32, 18)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Legs:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0.0202057, 0.124032, -0.124032), Vector3(0.00317019, 0.23188, -0.23188), Vector3(0.00317019, 0.121592, -0.121592), Vector3(0.00317019, 0.0652889, -0.0652889), Vector3(0.00317019, 0.175748, -0.175748), Vector3(0.00317019, 0.235834, -0.235834), Vector3(0.00317019, 0.124174, -0.124174), Vector3(0.00317019, 0.0649528, -0.0649528)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_n7onq"]
resource_name = "RUN_UP"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq"), ExtResource("6_hortq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Legs:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 32, 18), Rect2(96, 0, 32, 18), Rect2(192, 0, 32, 18), Rect2(288, 0, 32, 18), Rect2(384, 0, 32, 18), Rect2(480, 0, 32, 18), Rect2(576, 0, 32, 18), Rect2(672, 0, 32, 18)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Legs:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475), Vector3(0, -0.331475, 0.331475)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(0.0202057, 0.124032, -0.124032), Vector3(0.00943649, 0.234872, -0.234872), Vector3(0.00943649, 0.122681, -0.122681), Vector3(0.00943649, 0.0599087, -0.0599087), Vector3(0.00685874, 0.211087, -0.150425), Vector3(0.00685874, 0.262197, -0.201534), Vector3(0.00685874, 0.155168, -0.0945054), Vector3(0.00685874, 0.0914866, -0.0308243)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-0.785398, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_w0lyg"]
resource_name = "TEST"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6xf0u"]
_data = {
"IDLE": SubResource("Animation_eotaa"),
"RESET": SubResource("Animation_lddyw"),
"RUN_DOWN": SubResource("Animation_ub3k3"),
"RUN_RIGHT": SubResource("Animation_3djdd"),
"RUN_UP": SubResource("Animation_n7onq"),
"TEST": SubResource("Animation_w0lyg")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_rg1sy"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_7iw5l"]
properties/0/path = NodePath(".:velocity")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:player")
properties/1/spawn = true
properties/1/replication_mode = 0
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("../Camera3D:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("../Camera3D:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:rotation")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:scale")
properties/6/spawn = true
properties/6/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_isyqf"]
properties/0/path = NodePath(".:input_direction")
properties/0/spawn = false
properties/0/replication_mode = 1

[node name="TemplatePlayer" type="CharacterBody3D"]
script = ExtResource("1_rf1y4")
camera_offset = Vector3(0, 10, 10)
SPEED = 10.0

[node name="Head" type="Sprite3D" parent="."]
process_priority = 1
transform = Transform3D(4, 0, 0, 0, 2.82843, 2.82843, 0, -2.82843, 2.82843, -0.0608515, 0.0655381, -0.0655381)
flip_h = true
alpha_cut = 3
texture_filter = 0
texture = ExtResource("2_f0e40")

[node name="Eyes" type="Sprite3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0146058, -0.0228194, 0.00835645)
alpha_cut = 3
texture_filter = 0
texture = ExtResource("3_sgufp")

[node name="mouse" type="Sprite3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0699187, 0.00985768)
alpha_cut = 3
texture_filter = 0
texture = ExtResource("4_w3ij3")

[node name="Legs" type="Sprite3D" parent="."]
process_priority = 1
transform = Transform3D(4, 0, 0, 0, 2.82843, 2.82843, 0, -2.82843, 2.82843, 0, -0.4, 0.4)
modulate = Color(1, 0.29, 0.29, 1)
alpha_cut = 3
texture_filter = 0
texture = ExtResource("5_ouq7k")
region_enabled = true
region_rect = Rect2(0, 0, 39, 12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0413589)
shape = SubResource("CapsuleShape3D_43irl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6xf0u")
}

[node name="Hand" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.458892, 0, 0.398338)

[node name="PickUp" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickUp"]
shape = SubResource("SphereShape3D_rg1sy")

[node name="ServerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_7iw5l")

[node name="PlayerInput" type="MultiplayerSynchronizer" parent="."]
root_path = NodePath(".")
replication_config = SubResource("SceneReplicationConfig_isyqf")
script = ExtResource("7_xptgb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryPlayer" parent="CanvasLayer" instance=ExtResource("8_7qvr4")]
visible = false
offset_left = -136.0
offset_top = -128.0
offset_right = 136.0
offset_bottom = 128.0
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Node3D" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)
size = 20.0

[connection signal="area_entered" from="PickUp" to="." method="_on_pick_up_area_entered"]
[connection signal="area_exited" from="PickUp" to="." method="_on_pick_up_area_exited"]
